--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.1.1",
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.2.1",
+    "ngx-ui-loader": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
