--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@ckeditor/ckeditor5-angular": "^2.0.2",
+    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@syncfusion/ej2-angular-richtexteditor": "^19.4.50",
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.2.1",
     "ngx-ui-loader": "^11.0.0",
