--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~12.1.1",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@ngneat/hot-toast": "^3.4.3",
+    "@ngneat/overview": "^2.0.2",
     "@syncfusion/ej2-angular-richtexteditor": "^19.4.50",
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.2.1",
